Ran and plotted Round 17 data

--- a/figure_plotting.ipynb
+++ b/figure_plotting.ipynb
@@ -1730,6 +1730,204 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inds = (df_reduced['Round'] == 17) & (df_reduced['Dose'] == 1e9)\n",
+    "df_a = df_reduced.loc[inds]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We can determine the mean of each of the values\n",
+    "df_a_grouped = df_a.groupby(['Virus', 'Receptor', 'Dose']).mean().reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_a_grouped['Virus'].unique(), df_a_grouped['Receptor'].unique() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "source = ColumnDataSource(df_a_grouped)\n",
+    "\n",
+    "p = figure(x_range = ['None',\n",
+    "                      'Ly6a',\n",
+    "                      'Marmoset Ly6E',\n",
+    "                      'Marmoset LyPD5',\n",
+    "                     'Marmoset Lynx1'],\n",
+    "          y_range = ['CAP-B22','CAP-B10', 'PHP.eB'],\n",
+    "           title = 'Marmoset Receptor Comparison',\n",
+    "           x_axis_label = 'Receptor',\n",
+    "           y_axis_label = 'Virus',\n",
+    "           width=400, \n",
+    "           height=400)\n",
+    "\n",
+    "color_mapper = LinearColorMapper(palette = Viridis256, low = df_a_grouped['Total Brightness per Signal Area'].min(), high = df_a_grouped['Total Brightness per Signal Area'].max())\n",
+    "\n",
+    "color_bar = ColorBar(color_mapper = color_mapper,\n",
+    "                     location = (0, 0),\n",
+    "                     ticker = BasicTicker())\n",
+    "\n",
+    "p.add_layout(color_bar, 'right')\n",
+    "\n",
+    "p.scatter(x = 'Receptor', y = 'Virus', size = 'Percent Positive', fill_color = transform('Total Brightness per Signal Area', color_mapper), source = source)\n",
+    "\n",
+    "p.add_tools(HoverTool(tooltips = [('Round', '@Round'), ('Plate', '@Plate'), ('Well', '@Well'), ('Virus', '@Virus'), ('Receptor', '@Receptor'), ('Dose', '@Dose')]))\n",
+    "\n",
+    "p.xaxis.major_label_orientation = np.pi/2\n",
+    "\n",
+    "#p.output_backend = \"svg\"\n",
+    "\n",
+    "show(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "source = ColumnDataSource(df_a_grouped)\n",
+    "\n",
+    "p = figure(x_range = ['None',\n",
+    "                      'msCar4', \n",
+    "                      'msCar4 L71A',\n",
+    "                      'msCar4 L71E'],\n",
+    "          y_range = ['9P36',\n",
+    "                     '9P31'],\n",
+    "           title = 'Mouse Car4 Mutants',\n",
+    "           x_axis_label = 'Receptor',\n",
+    "           y_axis_label = 'Virus',\n",
+    "           width=500, \n",
+    "           height=400)\n",
+    "\n",
+    "color_mapper = LinearColorMapper(palette = Viridis256, low = df_a_grouped['Total Brightness per Signal Area'].min(), high = df_a_grouped['Total Brightness per Signal Area'].max())\n",
+    "\n",
+    "color_bar = ColorBar(color_mapper = color_mapper,\n",
+    "                     location = (0, 0),\n",
+    "                     ticker = BasicTicker())\n",
+    "\n",
+    "p.add_layout(color_bar, 'right')\n",
+    "\n",
+    "p.scatter(x = 'Receptor', y = 'Virus', size = 'Percent Positive', fill_color = transform('Total Brightness per Signal Area', color_mapper), source = source)\n",
+    "\n",
+    "p.add_tools(HoverTool(tooltips = [('Round', '@Round'), ('Plate', '@Plate'), ('Well', '@Well'), ('Virus', '@Virus'), ('Receptor', '@Receptor'), ('Dose', '@Dose')]))\n",
+    "\n",
+    "p.xaxis.major_label_orientation = np.pi/2\n",
+    "\n",
+    "#p.output_backend = \"svg\"\n",
+    "\n",
+    "show(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "source = ColumnDataSource(df_a_grouped)\n",
+    "\n",
+    "p = figure(x_range = ['None',\n",
+    "                      'Ly6c1', \n",
+    "                      'Ly6c1 E31R', \n",
+    "                      'Ly6c1 Q56A',\n",
+    "                      'Ly6c1 S94E', \n",
+    "                      'Ly6c1 triple mutant'],\n",
+    "          y_range = ['PHP.C2',\n",
+    "                     'PHP.C1'],\n",
+    "           title = 'Ly6c1 Mutants',\n",
+    "           x_axis_label = 'Receptor',\n",
+    "           y_axis_label = 'Virus',\n",
+    "           width=600, \n",
+    "           height=400)\n",
+    "\n",
+    "color_mapper = LinearColorMapper(palette = Viridis256, low = df_a_grouped['Total Brightness per Signal Area'].min(), high = df_a_grouped['Total Brightness per Signal Area'].max())\n",
+    "\n",
+    "color_bar = ColorBar(color_mapper = color_mapper,\n",
+    "                     location = (0, 0),\n",
+    "                     ticker = BasicTicker())\n",
+    "\n",
+    "p.add_layout(color_bar, 'right')\n",
+    "\n",
+    "p.scatter(x = 'Receptor', y = 'Virus', size = 'Percent Positive', fill_color = transform('Total Brightness per Signal Area', color_mapper), source = source)\n",
+    "\n",
+    "p.add_tools(HoverTool(tooltips = [('Round', '@Round'), ('Plate', '@Plate'), ('Well', '@Well'), ('Virus', '@Virus'), ('Receptor', '@Receptor'), ('Dose', '@Dose')]))\n",
+    "\n",
+    "p.xaxis.major_label_orientation = np.pi/2\n",
+    "\n",
+    "#p.output_backend = \"svg\"\n",
+    "\n",
+    "show(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "source = ColumnDataSource(df_a_grouped)\n",
+    "\n",
+    "p = figure(x_range = ['None',\n",
+    "                      'msCar4',\n",
+    "                      'msCar4 Q63G', \n",
+    "                      'rhCar4', \n",
+    "                      'rhCar4 G63Q'],\n",
+    "          y_range = ['TTD-008',\n",
+    "                     'TTD-004',\n",
+    "                     'TTD-001',\n",
+    "                     '9P36',\n",
+    "                     '9P31'],\n",
+    "           title = 'Mouse and Rhesus Comparison',\n",
+    "           x_axis_label = 'Receptor',\n",
+    "           y_axis_label = 'Virus',\n",
+    "           width=600, \n",
+    "           height=500)\n",
+    "\n",
+    "color_mapper = LinearColorMapper(palette = Viridis256, low = df_a_grouped['Total Brightness per Signal Area'].min(), high = df_a_grouped['Total Brightness per Signal Area'].max())\n",
+    "\n",
+    "color_bar = ColorBar(color_mapper = color_mapper,\n",
+    "                     location = (0, 0),\n",
+    "                     ticker = BasicTicker())\n",
+    "\n",
+    "p.add_layout(color_bar, 'right')\n",
+    "\n",
+    "p.scatter(x = 'Receptor', y = 'Virus', size = 'Percent Positive', fill_color = transform('Total Brightness per Signal Area', color_mapper), source = source)\n",
+    "\n",
+    "p.add_tools(HoverTool(tooltips = [('Round', '@Round'), ('Plate', '@Plate'), ('Well', '@Well'), ('Virus', '@Virus'), ('Receptor', '@Receptor'), ('Dose', '@Dose')]))\n",
+    "\n",
+    "p.xaxis.major_label_orientation = np.pi/2\n",
+    "\n",
+    "#p.output_backend = \"svg\"\n",
+    "\n",
+    "show(p)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
