Changes to plotting for Round 17, still requires update for markdown and to fix svg file output

--- a/figure_plotting.ipynb
+++ b/figure_plotting.ipynb
@@ -1777,7 +1777,8 @@
     "                      'Ly6a',\n",
     "                      'Marmoset Ly6E',\n",
     "                      'Marmoset LyPD5',\n",
-    "                     'Marmoset Lynx1'],\n",
+    "                      'Marmoset Lynx1',\n",
+    "                      'Marmoset CD59'],\n",
     "          y_range = ['CAP-B22','CAP-B10', 'PHP.eB'],\n",
     "           title = 'Marmoset Receptor Comparison',\n",
     "           x_axis_label = 'Receptor',\n",
@@ -1896,16 +1897,18 @@
     "                      'msCar4',\n",
     "                      'msCar4 Q63G', \n",
     "                      'rhCar4', \n",
-    "                      'rhCar4 G63Q'],\n",
+    "                      'rhCar4 G63Q',\n",
+    "                      'huCar4', \n",
+    "                      'huCar4 G63Q'],\n",
     "          y_range = ['TTD-008',\n",
     "                     'TTD-004',\n",
     "                     'TTD-001',\n",
     "                     '9P36',\n",
     "                     '9P31'],\n",
-    "           title = 'Mouse and Rhesus Comparison',\n",
+    "           title = 'Car4 species comparison with mutation',\n",
     "           x_axis_label = 'Receptor',\n",
     "           y_axis_label = 'Virus',\n",
-    "           width=600, \n",
+    "           width=700, \n",
     "           height=500)\n",
     "\n",
     "color_mapper = LinearColorMapper(palette = Viridis256, low = df_a_grouped['Total Brightness per Signal Area'].min(), high = df_a_grouped['Total Brightness per Signal Area'].max())\n",
