--- a/in_vitro_cell_segmentation.ipynb
+++ b/in_vitro_cell_segmentation.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "67ba0b68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,6 +24,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f63c8ee5",
    "metadata": {},
    "source": [
     "# High-throughput in vitro image segmentation workflow"
@@ -30,6 +32,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "62c159ee",
    "metadata": {},
    "source": [
     "The purpose of this code is to analyze a group of in vitro images for their overall transduction frequency and their brightness, to compare different virus based on their affinity to a receptor.\n",
@@ -41,6 +44,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b8d906ae",
    "metadata": {},
    "source": [
     "For the pipeline, files are organized in a folders by the Round (which are generally a group of experiments), Plate (which would contain at most 96 conditions), and Well (which would be a specific condition). To analyze this data, we first want to use a look up table to obtain the `Round`, `Plate`, and `Well` data.  "
@@ -49,15 +53,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "00a3a620",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read the CSV file into a pandas dataframe\n",
-    "df_lut = pd.read_csv('data/quantification/20220915_data_lookup_table.csv', comment='#')"
+    "df_lut = pd.read_csv('data/quantification/20220927_data_lookup_table.csv', comment='#')"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "7ecedda8",
    "metadata": {},
    "source": [
     "If you are running your own images, or want to run a subset of the images, the following code block facilitates this sort of analysis. "
@@ -66,11 +72,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "027097b1",
    "metadata": {},
    "outputs": [],
    "source": [
     "## To run a specific round/plate/well:\n",
-    "inds = (df_lut['Round'] == 17)#& (df_lut['Plate'] == 7) & (df_lut['Well'] == 59))\n",
+    "inds = (df_lut['Round'] == 18)#& (df_lut['Plate'] == 7) & (df_lut['Well'] == 59))\n",
     "df_lut = df_lut.loc[inds]\n",
     "\n",
     "## To run all cells up to a point in the table, use the following: \n",
@@ -80,6 +87,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "be8a3a62",
    "metadata": {},
    "source": [
     "Not all of the wells are filled, so we want to make sure the `Include` condition is set for these data. If an imaging error occured, you can exclude those wells in the Look Up Table."
@@ -88,6 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5c079ec7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,11 +105,12 @@
     "df_lut = df_lut.loc[inds]\n",
     "\n",
     "#Display the table\n",
-    "df_lut.head()"
+    "df_lut"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "7c5c49af",
    "metadata": {},
    "source": [
     "Next, we want to create the dataframe that we will use for the analysis. If you are continuing a previously interrupted analysis, you can instead set the dataframe as what was used previously. "
@@ -109,6 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "56796e4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,6 +143,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "eed08980",
    "metadata": {},
    "source": [
     "Then, we want to cycle through the images, get the data from them, and add it to the dataframe that we've set. We will save the dataframe after each well (just in case something fails). "
@@ -140,6 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1cea2a61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +198,7 @@
     "                       ignore_index=True)\n",
     "\n",
     "        # Save the dataframe (commented out to avoid overwriting)\n",
-    "        df.to_csv('data/quantification/20220831-data.csv', index=False)\n",
+    "        df.to_csv('data/quantification/20220927-data.csv', index=False)\n",
     "\n",
     "    else:\n",
     "        continue\n",
@@ -197,6 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6ac14398",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -204,7 +218,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -218,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
